--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
-spring.security.user.name=abc
-spring.security.user.password=123
+spring.datasource.url=jdbc:mysql://localhost:3306/training
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.jpa.hibernate.ddl-auto=update
